@@ -13,6 +13,8 @@ ECL 9.6.3:
 
  - EXT:OUTPUT-FLOAT-INFINITY works now fine when *print-circle* is T.
 
+ - WITH-STANDARD-IO-SYNTAX now also rebinds *print-pprint-dispatch*.
+
 * Compiler:
 
  - When printing out data and reading it from a FASL file, the
